--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -293,7 +293,7 @@
 
   #col-data-map{
     overflow-y: scroll;
-    box-shadow: 0 7px 64px 0 rgba(0, 0, 0, 0.07);
+    /* box-shadow: 0 7px 64px 0 rgba(0, 0, 0, 0.07); */
     background-color: white;
     padding: 2em 1em !important;
     position: relative;
